--- a/docroot/modules/custom/draft_administration/draft_administration.permissions.yml
+++ b/docroot/modules/custom/draft_administration/draft_administration.permissions.yml
@@ -4,3 +4,5 @@ administer shop sales:
   title: 'Administer shop sales'
 administer shop settings:
   title: 'Administer shop settings'
+administer shop customers:
+  title: 'Administer shop customers'
