Update Drupal core and modules

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
+        "drupal/admin_dialogs": "^1.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/advagg": "^6.0",
         "drupal/better_exposed_filters": "^6.0",
