--- a/config/default/user.role.shop_manager.yml
+++ b/config/default/user.role.shop_manager.yml
@@ -18,6 +18,7 @@ dependencies:
     - commerce_promotion
     - commerce_store
     - draft_administration
+    - file
     - media
     - node
     - system
@@ -82,6 +83,7 @@ permissions:
   - 'delete own component_page content'
   - 'delete own default commerce_product'
   - 'delete own document media'
+  - 'delete own files'
   - 'delete own image media'
   - 'delete own remote_video media'
   - 'delete own video media'
