Add GTM configurations

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/advagg": "^6.0",
         "drupal/better_exposed_filters": "^6.0",
+        "drupal/ckeditor_bootstrap_tabs": "^2.0",
         "drupal/commerce": "^2.35",
         "drupal/commerce_paypal": "^1.0@RC",
         "drupal/commerce_pricelist": "^2.1",
@@ -40,7 +41,7 @@
         "drupal/gin": "^3.0@RC",
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/google_analytics": "^4.0",
-        "drupal/google_tag": "^1.5",
+        "drupal/google_tag": "^2.0",
         "drupal/hreflang": "^1.11",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui_accordion": "^2.0",
