--- a/config/default/search_api_solr.solr_field_type.text_und_7_0_0.yml
+++ b/config/default/search_api_solr.solr_field_type.text_und_7_0_0.yml
@@ -189,6 +189,9 @@ solr_configs:
             -
               name: buildOnStartup
               VALUE: 'false'
+            -
+              name: indexPath
+              VALUE: ./und
 text_files:
   stopwords: |
 
