--- a/config/default/node.type.component_page.yml
+++ b/config/default/node.type.component_page.yml
@@ -8,7 +8,7 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Component page'
+name: 'Landing page'
 type: component_page
 description: ''
 help: ''
