--- a/config/default/user.role.shop_manager.yml
+++ b/config/default/user.role.shop_manager.yml
@@ -24,6 +24,7 @@ dependencies:
     - system
     - taxonomy
     - toolbar
+    - webform
 id: shop_manager
 label: 'Shop Manager'
 weight: 3
@@ -38,6 +39,7 @@ permissions:
   - 'access site in maintenance mode'
   - 'access toolbar'
   - 'access user profiles'
+  - 'access webform submission user'
   - 'administer commerce_promotion'
   - 'administer menu'
   - 'administer nodes'
@@ -47,6 +49,7 @@ permissions:
   - 'administer shop settings'
   - 'administer taxonomy'
   - 'administer users'
+  - 'administer webform submission'
   - 'bulk generate commerce_promotion_coupon'
   - 'bypass node access'
   - 'cancel account'
@@ -74,6 +77,7 @@ permissions:
   - 'delete any media'
   - 'delete any remote_video media'
   - 'delete any video media'
+  - 'delete any webform submission'
   - 'delete commerce_product_attribute'
   - 'delete component_page revisions'
   - 'delete default commerce_order'
@@ -87,6 +91,7 @@ permissions:
   - 'delete own image media'
   - 'delete own remote_video media'
   - 'delete own video media'
+  - 'delete own webform submission'
   - 'delete terms in categories'
   - 'delete terms in tags'
   - 'duplicate any commerce_promotion'
@@ -97,12 +102,14 @@ permissions:
   - 'edit any image media'
   - 'edit any remote_video media'
   - 'edit any video media'
+  - 'edit any webform submission'
   - 'edit own audio media'
   - 'edit own component_page content'
   - 'edit own document media'
   - 'edit own image media'
   - 'edit own remote_video media'
   - 'edit own video media'
+  - 'edit own webform submission'
   - 'edit terms in categories'
   - 'edit terms in tags'
   - 'manage default commerce_order_item'
@@ -121,6 +128,7 @@ permissions:
   - 'use admin toolbar search'
   - 'view all media revisions'
   - 'view all revisions'
+  - 'view any webform submission'
   - 'view commerce_order'
   - 'view commerce_product_attribute'
   - 'view commerce_promotion'
@@ -132,5 +140,6 @@ permissions:
   - 'view own unpublished commerce_product'
   - 'view own unpublished content'
   - 'view own unpublished media'
+  - 'view own webform submission'
   - 'view the administration theme'
   - 'view user email addresses'
