--- a/config/default/core.entity_view_mode.commerce_product.image.yml
+++ b/config/default/core.entity_view_mode.commerce_product.image.yml
@@ -6,5 +6,6 @@ dependencies:
     - commerce_product
 id: commerce_product.image
 label: Image
+description: ''
 targetEntityType: commerce_product
 cache: true
