--- a/config/default/core.entity_view_mode.commerce_product_variation.wishlist.yml
+++ b/config/default/core.entity_view_mode.commerce_product_variation.wishlist.yml
@@ -12,5 +12,6 @@ _core:
   default_config_hash: ir0ZAfTnxjCxwjHdreaE8qBRtAui00PP77puTcAUocw
 id: commerce_product_variation.wishlist
 label: Wishlist
+description: ''
 targetEntityType: commerce_product_variation
 cache: true
