--- a/config/default/core.entity_form_display.node.news.default.yml
+++ b/config/default/core.entity_form_display.node.news.default.yml
@@ -36,6 +36,12 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
