--- a/config/default/core.entity_view_mode.commerce_product_variation.cart.yml
+++ b/config/default/core.entity_view_mode.commerce_product_variation.cart.yml
@@ -6,5 +6,6 @@ dependencies:
     - commerce_product
 id: commerce_product_variation.cart
 label: Cart
+description: ''
 targetEntityType: commerce_product_variation
 cache: true
